--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-react": "^7.20.6",
     "stylelint": "^13.6.1",
     "stylelint-config-outside-in-order": "0.0.1"
   }
