--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "eslint-plugin-react": "^7.20.6",
+    "prop-types": "^15.7.2",
     "stylelint": "^13.6.1",
     "stylelint-config-outside-in-order": "0.0.1"
   }
