--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pokestore",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://cycosta.github.io/pokestore",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,8 +37,9 @@
   },
   "devDependencies": {
     "eslint-plugin-react": "^7.20.6",
+    "gh-pages": "^3.1.0",
     "prop-types": "^15.7.2",
     "stylelint": "^13.6.1",
     "stylelint-config-outside-in-order": "0.0.1"
-  }
+  },
 }
